# PicoW

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.sh
WebServersComparison/: .gitignore
WebServersComparison/ESP/: .gitignore  CMakeLists.txt  build.sh  flash.sh  sdkconfig.defaults
WebServersComparison/ESP/cmake/: get_esp_idf.cmake
WebServersComparison/ESP/main/: hello_world_main.c
WebServersComparison/ESP32-arduino/: README.md  platformio.ini
WebServersComparison/ESP32-arduino/src/: main.cpp
WebServersComparison/ESP32-platformio/: .gitignore  CMakeLists.txt  platformio.ini
WebServersComparison/ESP32-platformio/src/: CMakeLists.txt  main.c
WebServersComparison/PicoW/: .gitignore  CMakeLists.txt
WebServersComparison/PicoW-arduino/: platformio.ini
WebServersComparison/PicoW-arduino/src/: main.cpp
WebServersComparison/PicoW/cmake/: utils.cmake
WebServersComparison/PicoW/src/LwipWebServer/: CMakeLists.txt
foosball-score-display/: Cargo.toml  README.md
foosball-score-display/.cargo/: config.toml
foosball-score-display/src/: display.rs  graphics.rs  lib.rs  main.rs
src/HelloPico/: CMakeLists.txt  main.cpp
src/LwipWebServer/: main.cpp
